--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ GOOGLE_CLIENT_ID = 422790938507-guaf0154mm73cc5lkh5mrj0fj80f5haa.apps.googleuser
 GOOGLE_CLIENT_SECRET = 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
 FACEBOOK_CLIENT_ID = 422790938507-b2rttbn54hsff0cocrq4hjksfqgmflna.apps.googleusercontent.com
 FACEBOOK_SECRET_ID = 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
+EMAIL_USER=viralsavaliya96@gmail.com
+EMAIL_PASSWORD=rlriampwtjzkmufy
